--- a/About Olympics Basketball.html
+++ b/About Olympics Basketball.html
@@ -10,79 +10,8 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-          <a class="navbar-brand" href="#">Basketball for All</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#mainNav"
-            aria-controls="mainNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-    
-          <div class="collapse navbar-collapse" id="mainNav">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  id="nbaDropdown"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >NBA</a>
-                <ul class="dropdown-menu" aria-labelledby="nbaDropdown">
-                  <li><a class="dropdown-item" href="NBA stat leaders.html">Stat Leaders</a></li>
-                  <li><a class="dropdown-item" href="NBA about page.html">About NBA</a></li>
-                  <li><a class="dropdown-item" href="NBA season tickets.html">Season Tickets</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="nba_standings.html">Standings</a></li>
-                </ul>
-              </li>
-              <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  id="ncaadrop"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >NCAA</a>
-                <ul class="dropdown-menu" aria-labelledby="ncaadrop">
-                  <li><a class="dropdown-item" href="NCAA stat leaders.html">Stat Leaders</a></li>
-                  <li><a class="dropdown-item" href="NCAA team stats.html">Team offense Stats 1</a></li>
-                  <li><a class="dropdown-item" href="#">Another Page 2</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else</a></li>
-                </ul>
-              </li>
-              <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  id="olympicsDrop"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >Olympics</a>
-                <ul class="dropdown-menu" aria-labelledby="olympicsDrop">
-                  <li><a class="dropdown-item" href="Olympics winners.html">Olympics Winners</a></li>
-                  <li><a class="dropdown-item" href="#">Another Page 1</a></li>
-                  <li><a class="dropdown-item" href="#">Another Page 2</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="btn btn-outline-light ms-2" href="#">Fantasy</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    
+<div id="navbar"></div>
+ 
 <img src="USA-Basketball-2024-Paris-Olympics-team-pool.jpg" alt ="USA 2024 Olympic team">
 <img src ="Olympic Steph Curry.jpeg" height = 275 alt = "Steph Curry">
 <img src = "Lebron Tatum Olympics.jpeg" height = 275 alt = "Lebron Tatum Olympics">
@@ -126,4 +55,14 @@
         <p>Despite these differences, the fundamental skills and strategies of basketball translate between the two. Many NBA players participate in the Olympics, requiring them to adapt to the FIBA ruleset for the duration of the tournament. And to be frank it's a little easier playing in Olympic basketball than the NBA. While the nuances can impact gameplay and strategy, the high level of athleticism and basketball IQ prevalent in the NBA often allows these players to adjust and compete effectively under Olympic rules. The past two decades of Olympics basketball gold medalists reflects that statement.</p>
       </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+  fetch('navbar.html')
+    .then(response => response.text())
+    .then(data => {
+      document.getElementById('navbar').innerHTML = data;
+    })
+    .catch(error => console.error('Error loading navbar:', error));
+</script>
+
 </html>
