--- a/Sports bet.html
+++ b/Sports bet.html
@@ -25,6 +25,13 @@
         .gallery img:hover {
             transform: scale(1.05);
         }
+
+        #total-basket-container {
+            position: absolute;
+            top: 70px;
+            right: 10px;
+            z-index: 1000;
+        }
     </style>
 </head>
 
@@ -138,13 +145,13 @@
             class="bg-green-500 hover:bg-green-700 text- font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline w-full">Calculate
             Potential Winnings</button>
     </div>
-    <div class="container max-w-md bg-white shadow-md rounded-lg p-8 mt-8">
-        <h1 class="text-2xl font-semibold text-blue-600 mb-6 text-center">Total Basket</h1>
-        <div class="mb-4">
-            <p class="block text-gray-700 text-sm font-bold mb-2">Total Potential Winnings:</p>
+    <div id="total-basket-container" class="bg-white shadow-md rounded-lg p-4 mt-2">
+        <h1 class="text-lg font-semibold text-blue-600 mb-2 text-center">Total Basket</h1>
+        <div class="mb-2">
+            <p class="block text-gray-700 text-sm font-bold mb-1">Total Potential Winnings:</p>
             <p id="total-winnings-amount" class="text-xl text-gray-800 font-medium text-center">0</p>
         </div>
-        <div id="basket-result" class="mt-6 text-center text-lg text-gray-800 font-medium"></div>
+        <div id="basket-result" class="mt-2 text-center text-sm text-gray-800 font-medium"></div>
         <button id="add-winnings-to-basket-button"
             class="bg-green-500 hover:bg-green-700 text- font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline w-full">
             Add Winnings to Basket
@@ -194,3 +201,6 @@
 </body>
 
 </html>
+
+        
+
