--- a/fantasy.html
+++ b/fantasy.html
@@ -10,113 +10,115 @@
   <link rel="stylesheet" href="fantasy.css" />
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-          <a class="navbar-brand" href="index.html">Basketball for All</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
-            aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-    
-          <div class="collapse navbar-collapse" id="mainNav">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="nbaDropdown" data-bs-toggle="dropdown"
-                  aria-expanded="false">NBA</a>
-                <ul class="dropdown-menu" aria-labelledby="nbaDropdown">
-                  <li><a class="dropdown-item" href="NBA stat leaders.html">Stat Leaders</a></li>
-                  <li><a class="dropdown-item" href="NBA about page.html">About NBA</a></li>
-                  <li><a class="dropdown-item" href="NBA season tickets.html">Season Tickets</a></li>
-                  <li>
-                    <hr class="dropdown-divider">
-                  </li>
-                  <li><a class="dropdown-item" href="nba_standings.html">Standings</a></li>
-                </ul>
+  
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">Basketball for All</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
+        aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="mainNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="nbaDropdown" data-bs-toggle="dropdown"
+              aria-expanded="false">NBA</a>
+            <ul class="dropdown-menu" aria-labelledby="nbaDropdown">
+              <li><a class="dropdown-item" href="NBA stat leaders.html">Stat Leaders</a></li>
+              <li><a class="dropdown-item" href="NBA about page.html">About NBA</a></li>
+              <li><a class="dropdown-item" href="NBA season tickets.html">Season Tickets</a></li>
+              <li>
+                <hr class="dropdown-divider">
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="ncaadrop" data-bs-toggle="dropdown"
-                  aria-expanded="false">NCAA</a>
-                <ul class="dropdown-menu" aria-labelledby="ncaadrop">
-                  <li><a class="dropdown-item" href="NCAA stat leaders.html">Stat Leaders</a></li>
-                  <li><a class="dropdown-item" href="NCAA team stats.html">Team offense Stats 1</a></li>
-                  <li><a class="dropdown-item" href="#">Another Page 2</a></li>
-                  <li>
-                    <hr class="dropdown-divider">
-                  </li>
-                  <li><a class="dropdown-item" href="#">Something else</a></li>
-                </ul>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="olympicsDrop" data-bs-toggle="dropdown"
-                  aria-expanded="false">Olympics</a>
-                <ul class="dropdown-menu" aria-labelledby="olympicsDrop">
-                  <li><a class="dropdown-item" href="About Olympics Basketball.html">About Olympics Basketball</a></li>
-                  <li><a class="dropdown-item" href="Olympics winners.html">Olympics Winners</a></li>
-                  <li><a class="dropdown-item" href="#">Another Page 2</a></li>
-                  <li>
-                    <hr class="dropdown-divider">
-                  </li>
-                  <li><a class="dropdown-item" href="#">Something else</a></li>
-                </ul>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="gameChangersDrop" data-bs-toggle="dropdown"
-                  aria-expanded="false">Game Changers</a>
-                <ul class="dropdown-menu" aria-labelledby="gameChangersDrop">
-                  <li><a class="dropdown-item" href="NBA gamechangers.html">NBA gamechangers</a></li>
-                  <li><a class="dropdown-item" href="NCAA gamechangers.html">NCAA gamechangers</a></li>
-                  <li><a class="dropdown-item" href="#">Another Page 2</a></li>
-                  <li>
-                    <hr class="dropdown-divider">
-                  </li>
-                  <li><a class="dropdown-item" href="#">Something else</a></li>
-                </ul>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="fantasyDrop" data-bs-toggle="dropdown"
-                  aria-expanded="false">Fantasy</a>
-                <ul class="dropdown-menu" aria-labelledby="gameChangersDrop">
-                  <li><a class="dropdown-item" href="Sports bet.html">Sports betting</a></li>
-                  <li><a class="dropdown-item" href="#"></a></li>
-                  <li><a class="dropdown-item" href="#">Another Page 2</a></li>
-                  <li>
-                    <hr class="dropdown-divider">
-                  </li>
-                  <li><a class="dropdown-item" href="#">Something else</a></li>
-                </ul>
-              </li>
+              <li><a class="dropdown-item" href="nba_standings.html">Standings</a></li>
             </ul>
-          </div>
-        </div>
-      </nav>
-    
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="ncaadrop" data-bs-toggle="dropdown"
+              aria-expanded="false">NCAA</a>
+            <ul class="dropdown-menu" aria-labelledby="ncaadrop">
+              <li><a class="dropdown-item" href="NCAA stat leaders.html">Stat Leaders</a></li>
+              <li><a class="dropdown-item" href="NCAA team stats.html">Team offense Stats 1</a></li>
+              <li><a class="dropdown-item" href="#">Another Page 2</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">Something else</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="olympicsDrop" data-bs-toggle="dropdown"
+              aria-expanded="false">Olympics</a>
+            <ul class="dropdown-menu" aria-labelledby="olympicsDrop">
+              <li><a class="dropdown-item" href="About Olympics Basketball.html">About Olympics Basketball</a></li>
+              <li><a class="dropdown-item" href="Olympics winners.html">Olympics Winners</a></li>
+              <li><a class="dropdown-item" href="#">Another Page 2</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">Something else</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="gameChangersDrop" data-bs-toggle="dropdown"
+              aria-expanded="false">Game Changers</a>
+            <ul class="dropdown-menu" aria-labelledby="gameChangersDrop">
+              <li><a class="dropdown-item" href="NBA gamechangers.html">NBA gamechangers</a></li>
+              <li><a class="dropdown-item" href="NCAA gamechangers.html">NCAA gamechangers</a></li>
+              <li><a class="dropdown-item" href="#">Another Page 2</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">Something else</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="fantasyDrop" data-bs-toggle="dropdown"
+              aria-expanded="false">Fantasy</a>
+            <ul class="dropdown-menu" aria-labelledby="gameChangersDrop">
+              <li><a class="dropdown-item" href="Sports bet.html">Sports betting</a></li>
+              <li><a class="dropdown-item" href="fantasy.html">Team Builder</a></li>
+              <li><a class="dropdown-item" href="#">Another Page 2</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">Something else</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
   <main class="container my-5">
     <h2 class="text-center mb-4">Create Your Fantasy Starting 5</h2>
 
     <form id="fantasyForm" class="row g-3">
-      <!-- Dropdowns will be populated dynamically -->
+      <!-- Each position -->
       <div class="col-md-6">
         <label for="pg" class="form-label">Point Guard (PG)</label>
-        <select class="form-select player-select" id="pg" required><option>Loading...</option></select>
+        <select class="form-select" id="pg" required><option>Loading...</option></select>
       </div>
       <div class="col-md-6">
         <label for="sg" class="form-label">Shooting Guard (SG)</label>
-        <select class="form-select player-select" id="sg" required><option>Loading...</option></select>
+        <select class="form-select" id="sg" required><option>Loading...</option></select>
       </div>
       <div class="col-md-6">
         <label for="sf" class="form-label">Small Forward (SF)</label>
-        <select class="form-select player-select" id="sf" required><option>Loading...</option></select>
+        <select class="form-select" id="sf" required><option>Loading...</option></select>
       </div>
       <div class="col-md-6">
         <label for="pf" class="form-label">Power Forward (PF)</label>
-        <select class="form-select player-select" id="pf" required><option>Loading...</option></select>
+        <select class="form-select" id="pf" required><option>Loading...</option></select>
       </div>
       <div class="col-md-12">
         <label for="c" class="form-label">Center (C)</label>
-        <select class="form-select player-select" id="c" required><option>Loading...</option></select>
+        <select class="form-select" id="c" required><option>Loading...</option></select>
       </div>
+
       <div class="col-12 text-center">
-        <button type="submit" class="btn btn-primary mt-3">Submit Lineup</button>
+        <button type="submit" class="btn btn-primary mt-3">Save My Team</button>
       </div>
     </form>
 
@@ -124,10 +126,17 @@
 
     <h3 class="text-center mb-3">Your Fantasy Team</h3>
     <div id="teamDisplay" class="row g-4 mb-4"></div>
-    <div id="totalScore" class="text-center fw-bold fs-4"></div>
   </main>
 
+  <!-- Bootstrap Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Load navbar -->
+  <script>
+    fetch("navbar.html")
+      .then(res => res.text())
+      .then(html => document.getElementById("navbar").innerHTML = html);
+  </script>
 
   <!-- Fantasy JS -->
   <script src="fantasy.js"></script>
