--- a/Olympic gamechangers.html
+++ b/Olympic gamechangers.html
@@ -168,7 +168,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="Lisa Leslie Olympics.jpg"
+                    <img src="Manu Ginobli olympics.jpg"
                         class="card-img-top" alt="Manu Ginóbili Olympics">
                     <div class="card-body">
                         <h5 class="card-title">Manu Ginóbili</h5>
