--- a/NCAA gamechangers.html
+++ b/NCAA gamechangers.html
@@ -98,7 +98,7 @@
         <div class="row row-cols-1 row-cols-md-2 g-4">
             <div class="col">
                 <div class="card h-100">
-                    <img src="Kareem Abdul Jabbar college.jpeg" class="card-img-top"
+                    <img src="src/Kareem Abdul Jabbar college.jpeg" class="card-img-top"
                         alt="Kareem Abdul-Jabbar">
                     <div class="card-body">
                         <h5 class="card-title">Lew Alcindor (Kareem Abdul-Jabbar)</h5>
@@ -113,7 +113,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="Bill Walton.jpeg" class="card-img-top"
+                    <img src="src/Bill Walton.jpeg" class="card-img-top"
                         alt="Bill Walton">
                     <div class="card-body">
                         <h5 class="card-title">Bill Walton</h5>
@@ -128,7 +128,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="Larry Bird college.jpeg" class="card-img-top"
+                    <img src="src/Larry Bird college.jpeg" class="card-img-top"
                         alt="Larry Bird">
                     <div class="card-body">
                         <h5 class="card-title">Larry Bird</h5>
@@ -143,7 +143,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="Magic Johnson college.jpg" class="card-img-top"
+                    <img src="src/Magic Johnson college.jpg" class="card-img-top"
                         alt="Magic Johnson">
                     <div class="card-body">
                         <h5 class="Magic Johnson college.jpeg">Magic Johnson</h5>
@@ -158,7 +158,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="Christian Laettner.jpeg" class="card-img-top"
+                    <img src="src/Christian Laettner.jpeg" class="card-img-top"
                         alt="Christian Laettner">
                     <div class="card-body">
                         <h5 class="Christian Laettner.jpg">Christian Laettner</h5>
