--- a/NBA about page.html
+++ b/NBA about page.html
@@ -8,7 +8,7 @@
     integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
   <link rel='stylesheet' href="stylesheet.css">
 
-
+  <title>About the NBA</title>
 
 
 </head>
