--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
 
         <div class="add-comment">
           <div class="input-container">
+            <lablel for-"comment-input"></lablel>
             <textarea id="comment-input" placeholder="Add your comment to the debate..."></textarea>
 
           </div>
